examples/negative/silent_contract/pub_fn_transitive_effect.kai
# Silent contract (#511 audit): `pub fn caller()` declares a pure
# row but calls `callee() / Stdout` — the effect should propagate
# into `caller`'s row. Stage 2 currently accepts this without
# diagnostic. See examples/negative/silent_contract/README.md
# for the follow-up issue number.

pub fn callee() : Int / Stdout = {
  print("inner")
  1
}

pub fn caller() : Int = callee()

fn main() : Int / Console = caller()
